address some spacing issues on mobile

--- a/cestlavie-app/static/css/layout.css
+++ b/cestlavie-app/static/css/layout.css
@@ -7,7 +7,7 @@
 }
 
 main {
-	width: 75%;
+	width: 90%;
 	/* max-width: 48rem; */
 	/* max-width: 42rem; */
 	margin: 6rem auto;
